deinterlace: send QoS messages when dropping a frame

https://bugzilla.gnome.org/show_bug.cgi?id=657941